force-app/main/default/objects/Training__c/fields/Caregiver_ID__c.field-meta.xml
<CustomField>
    <fullName>Caregiver_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Caregiver ID</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Trainings</relationshipLabel>
    <relationshipName>Trainings</relationshipName>
    <type>Lookup</type>
</CustomField>