force-app/main/default/objects/Training__c/fields/Certification_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Certification_Expiry_Date__c</fullName>
    <label>Certification Expiry Date</label>
    <type>Date</type>
</CustomField>