force-app/main/default/objects/Training__c/fields/Certification_ID__c.field-meta.xml
<CustomField>
    <fullName>Certification_ID__c</fullName>
    <displayFormat>CID-{00000}</displayFormat>
    <label>Certification ID</label>
    <type>AutoNumber</type>
</CustomField>