force-app/main/default/objects/Training__c/fields/Certification_Issued__c.field-meta.xml
<CustomField>
    <fullName>Certification_Issued__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Certification Issued?</label>
    <type>Checkbox</type>
</CustomField>