force-app/main/default/objects/Training__c/fields/Issued_Date_of_Certification__c.field-meta.xml
<CustomField>
    <fullName>Issued_Date_of_Certification__c</fullName>
    <label>Issued Date of Certification</label>
    <type>Date</type>
</CustomField>