force-app/main/default/objects/Training__c/fields/Required_for_Licensing__c.field-meta.xml
<CustomField>
    <fullName>Required_for_Licensing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Required for Licensing?</label>
    <type>Checkbox</type>
</CustomField>