force-app/main/default/objects/Training__c/fields/Training_Contact_Info__c.field-meta.xml
<CustomField>
    <fullName>Training_Contact_Info__c</fullName>
    <label>Training Contact Info.</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>