force-app/main/default/objects/Training__c/fields/Training_Cost__c.field-meta.xml
<CustomField>
    <fullName>Training_Cost__c</fullName>
    <label>Training Cost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>