force-app/main/default/objects/Training__c/fields/Training_Format__c.field-meta.xml
<CustomField>
    <fullName>Training_Format__c</fullName>
    <label>Training Format</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In-Person</fullName>
            </value>
            <value>
                <fullName>Online</fullName>
            </value>
            <value>
                <fullName>Hybrid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>