force-app/main/default/objects/Training__c/fields/Training_Location__c.field-meta.xml
<CustomField>
    <fullName>Training_Location__c</fullName>
    <label>Training Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>