force-app/main/default/objects/Training__c/fields/Training_Type__c.field-meta.xml
<CustomField>
    <fullName>Training_Type__c</fullName>
    <label>Training Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pre-Licensing</fullName>
            </value>
            <value>
                <fullName>Renewal</fullName>
            </value>
            <value>
                <fullName>Special Needs</fullName>
            </value>
            <value>
                <fullName>Trauma-Informed Care</fullName>
            </value>
            <value>
                <fullName>CPR</fullName>
            </value>
            <value>
                <fullName>etc.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>